--- a/mini-etsy/src/App.css
+++ b/mini-etsy/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin: 0px;
+  text-align: center;
 }
 
 .App-logo {
@@ -54,8 +55,8 @@ h1{
 }
 .homePic{
   width: 80%;
-  height: 80%;
   margin: 0px;
+  object-fit: cover;
 }
 
 h2{
@@ -108,12 +109,9 @@ main{
   margin: 0px;
 }
 
-.keySearch{
-  width: 40%;
-}
 
-input {
-  width: 60%;
+.filter{
+  width: 30%;
   border: 2px solid rgba(225, 255, 159,0.01); 
   -webkit-box-shadow: 
     inset 0 0 8px  rgba(0,0,0,0.1),
@@ -128,25 +126,10 @@ input {
   background: rgba(225, 255, 159,0.3);
 }
 
-button{
-  border: 2px solid rgba(189, 159, 255, 0.01); 
-  -webkit-box-shadow: 
-    inset 0 0 8px  rgba(0,0,0,0.1),
-          0 0 16px rgba(0,0,0,0.1); 
-  -moz-box-shadow: 
-    inset 0 0 8px  rgba(0,0,0,0.1),
-          0 0 16px rgba(0,0,0,0.1); 
-  box-shadow: 
-    inset 0 0 8px  rgba(0,0,0,0.1),
-          0 0 16px rgba(0,0,0,0.1); 
-  padding: 5px;
-  background: rgba(189, 159, 255,0.3);
-
-}
 
 select{
-  width: 100px;
-  border: 2px solid rgba(189, 159, 255, 0.01); 
+  width: 10%;
+  border: 2px solid rgba(225, 255, 159, 0.01); 
   -webkit-box-shadow: 
     inset 0 0 8px  rgba(0,0,0,0.1),
           0 0 16px rgba(0,0,0,0.1); 
@@ -160,6 +143,13 @@ select{
   background: rgba(189, 159, 255,0.3);
 }
 
+.loadingMessage{
+  text-align: center;
+}
+
+.loadingImage{
+  border: 0px;
+}
 
 .dashboard{
   display: flex;
@@ -183,6 +173,15 @@ select{
   text-align: center;
 }
 
+.productSummary{
+  width: 60%;
+  text-align: center;
+  font-size: 13px;
+  height: 30%;
+  margin: 5px 0px;
+  text-decoration: underline;
+}
+
 
 .thumbnail{
   width: 40%;
@@ -201,17 +200,173 @@ select{
   width: 40%;
   height: 40%;
   margin: 0px 50px 100px 100px;
+  object-fit: cover;
 }
 
-.productText{
+.detailTitle{
+  font-size: 20px;
+}
+
+button{
+  border: 2px solid rgba(189, 159, 255, 0.01); 
+  -webkit-box-shadow: 
+    inset 0 0 8px  rgba(0,0,0,0.1),
+          0 0 16px rgba(0,0,0,0.1); 
+  -moz-box-shadow: 
+    inset 0 0 8px  rgba(0,0,0,0.1),
+          0 0 16px rgba(0,0,0,0.1); 
+  box-shadow: 
+    inset 0 0 8px  rgba(0,0,0,0.1),
+          0 0 16px rgba(0,0,0,0.1); 
+  padding: 5px;
+  background: rgba(189, 159, 255,0.3);
+
+}
+
+.detailText{
   display: flex;
   flex-direction: column;
   margin: 0px 100px 100px 50px;
   text-align: left;
 }
 
-.productText * {
-  margin: 0px 0px 20px 0px;
+.detailText * {
+  margin: 0px 0px 10px 0px;
+}
+
+.detailDescription{
+  font-size: 13px;
 }
 
 
+@media only screen and (max-width: 600px) {
+  .intro > p{
+    font-size: 18px;
+  }
+
+  .filters{
+    width: 80%;
+  }
+  
+  .filter{
+    width: 50%;
+  }
+  
+  select{
+    width: 40%;
+  }
+
+  .productCard{
+    width: 100%;
+    height: 300px;
+  }
+
+  .productSummary{
+    width: 80%;
+  }
+
+  .productDetail{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0px;
+    padding: 0px 10px;
+    text-align: center;
+  }
+  
+  .largePic{
+    width: 85%;
+    margin: 0px 0px 20px 0px;
+  }
+  
+  .detailTitle{
+    font-size: 24px;
+  }
+  
+  .detailText{
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    text-align: left;
+    width: 100%;
+  }
+  
+  .detailText * {
+    margin: 0px 0px 10px 0px;
+  }
+  
+  .detailDescription{
+    font-size: 16px;
+  }
+
+  button{
+    font-size: 16px;
+  }
+ }
+
+
+ @media only screen and (max-width: 900px) and (min-width: 600px) {
+   .intro > p{
+     font-size: 26px;
+   }
+  .filters{
+    width: 50%;
+  }
+  
+  .filter{
+    width: 40%;
+  }
+  
+  select{
+    width: 20%;
+  }
+
+  .productCard{
+    width: 50%;
+    height: 300px;
+  }
+
+  .productDetail{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0px;
+    padding: 0px 10px;
+    text-align: center;
+  }
+  
+  .largePic{
+    width: 85%;
+    margin: 0px 0px 20px 0px;
+  }
+  
+  .detailTitle{
+    font-size: 24px;
+  }
+  
+  .detailText{
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    text-align: left;
+    width: 80%;
+  }
+  
+  .detailText * {
+    margin: 0px 0px 10px 0px;
+  }
+  
+  .detailDescription{
+    font-size: 16px;
+  }
+
+  button{
+    font-size: 16px;
+  }
+ }
+.notes{
+  text-align:left;
+  padding: 0% 5%;
+}
